--- a/src/sass/app.scss
+++ b/src/sass/app.scss
@@ -1,15 +1,31 @@
 body {
-  background: rgb(73, 68, 68);
-  color: rgb(235, 235, 235);
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  width: 100vw;
+  height: 100vh;
 }
 
-.test {
-  padding: 50px;
-  background: #000;
-}
+header {
+  background-color: antiquewhite;
 
-.test2 {
-  max-width: 1200px;
-  margin: 0 auto;
-  padding: 150px 20px;
+  & > h1 {
+    font-size: 4em;
+  }
+
+  & > h2 {
+    font-size: 3em;
+  }
+
+  & > h3 {
+    font-size: 2em;
+  }
+
+  & > h4 {
+    font-size: 1em;
+
+    small {
+      color: #ccc;
+    }
+  }
 }
